<resources>
    <string name="app_name">VnptOta</string>
    <string name="update_url"></string>
    <string name="what_new_title">What new?</string>
    <string name="btn_download_title">Download</string>
    <string name="btn_upgrade_title">Upgrade</string>
    <string name="btn_pause_title">Pause</string>
    <string name="tv_release_date_title">Release Date:</string>
    <string name="tv_firmware_size_title">Firmware Size:</string>
    <string name="progress_bar_wait">Validating ...</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_download_again">Download Again</string>
    <string name="dialog_upgrade_tile">Upgrade</string>
    <string name="dialog_upgrade_content">Upgrade firmware now</string>
    <string name="dialog_error_tile">Error</string>
    <string name="dialog_pause_tile">Notice</string>
    <string name="new_version_detected">New firmware is available</string>
    <string name="notification_download_complete_title">Download completed</string>
    <string name="notification_download_complete_context">Tap to install the system update</string>
    <string name="unknown_per">Unknown</string>
    <string name="file_note_valid">Firmware file is not valid</string>
    <string name="download_error_create_folder">Create firmware folder is failed</string>
    <string name="download_error_network_not_connected">Network is not connected</string>
    <string name="download_error_range_not_satisfiable">Http request range not satisfiable</string>
    <string name="download_error_open_connection">Open network is failed</string>
    <string name="download_error_connect_to_resource">Cannot find network resource</string>
    <string name="download_error_file_stream">Network streaming is failed. Please check internet connetion. Then press Download button to retry!</string>
    <string name="download_pause_file_stream">Processing is paused. Please press Download button to continue!</string>
    <string name="download_error_size_not_match">Filse size not match</string>
    <string name="unknown_error">Unknown</string>
    <string name="alert_have_firmware_title">Available Updates</string>
    <string name="alert_upgrade_successfully_title">Configuration</string>
    <string name="alert_upgrade_successfully_content">Upgrade successfully</string>
    <string name="alert_upgrade_faild_title">Unfortunately</string>
    <string name="alert_upgrade_faild_content">Upgrade is failed</string>
	<string name="alert_upgrade_part_content">System upgrade is not completed. Please continue to upgrade the system again.</string>
	<string name="dialog_btn_continue_upgrade">Continue</string>
    <string name="get_info_error_client_protocol">Error - client protocol</string>
    <string name="get_info_error_parser_xml">Parser xml file is error</string>
    <string name="get_info_error_no_xml">No xml file</string>
    <string name="get_info_error_get_rom_info">Get firmware info is failed</string>
    <string name="get_info_error_no_firmware">No firmware</string>
	<string name="alert_title_warning">Warning!</string>
	<string name="alert_btn_continue">Continue</string>
	<string name="alert_btn_later">Later</string>
	<string name="download_fw_in_data_connection_mode">You are using Data Connection. Download Firmware now may cost you money. Do you want to continue download new Firmware?</string>
	<string name="alert_have_firmware_content">Available firmware updates. Please, upgrade now!</string>
	<string name="main_device_info">Device Information</string>
	<string name="main_device">Device</string>
	<string name="main_rom">ROM</string>
	<string name="main_otaid">Application version</string>
	<string name="main_updates">Updates</string>
	<string name="main_avail_updates">Available Updates</string>
    <string name="main_updates_none">No update available</string>
    <string name="title_activity_update_fw_ui">Update Firmware</string>
    <string name="action_settings">Settings</string>
    <string name="cap_nhat_fw">Check new firmware</string>
    <string name="phien_ban_hien_tai_2">Current version:</string>
    <string name="ngay_cap_nhat_2">Updated date:</string>
    <string name="desc">Smartbox AML version 2</string>
	<string name="circle_dialog_wait">Checking for Updates...</string>
	<string name="dialog_no_internet">Network is not connected</string>
	<string name="dialog_warning_title">Warning</string>
	<string name="dialog_btn_settings">Settings</string>
	<string name="dialog_no_firmware">Firmware is not available</string>
	<string name="download_file">Download File</string>
	<string name="get_xml">Get Xml</string>
	<string name="check_firmware">Check Firmware</string>
	<string name="auto_query">Auto Query</string>
	<string name="firmware_version">Firmware Version:</string>
	<string name="onehundern">/100</string>
	<string name="zero">0</string>
	<string name="downloading_fw_basic">Downloading File Basic...</string>
	<string name="downloading_fw_delta">Downloading File Delta...</string>
	<string name="download_Completed">Download completed!</string>
    <string name="download_file_txt">Download File</string>
    <string name="get_xml_txt">Get XML</string>
    <string name="check_fw_txt">Check Firmware</string>
    <string name="updagrade_txt">Upgrade</string>
    <string name="auto_query_txt">Auto Query</string>
    <string name="fw_version_txt">Firmware Version</string>
    <string name="tv_percent_100_txt">/100</string>
    <string name="tv_download_percent_txt">0</string>
     <string name="notif_text_rom">VNPT Update available</string>
    <string name="notif_source">VNPT Updater</string>
    <string name="alert_nodata_title">No Data Connection</string>
    <string name="alert_nodata_message">You have no data connection\n Please turn on Wi-fi</string>
    <string name="alert_nowifi_title">No Wifi Connection</string>
    <string name="alert_nowifi_message">You have no Wifi connection\n Please turn on Wi-fi</string>
    <string name="alert_wifi_settings">Wi-fi Settings</string>
    <string name="alert_ignore">Ignore</string>
    <string name="alert_options_title">Options</string>
    <string name="alert_exit">Exit</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_continue">Continue</string>
    <string name="alert_rename">Rename</string>
    <string name="alert_rename_title">Rename file</string>
    <string name="alert_rename_message">Enter new file name</string>
    <string name="alert_install_title">Install ZIP</string>
    <string name="alert_install">Install</string>
    <string name="alert_install_message">Installing the file will reboot into recovery to flash the ZIP file. After installation, the system will automatically reboot. Please do not turn power off while installing</string>
    <string name="alert_noinstall_message">Unfortunately, ROMs on your device must be flashed manually\n Please use the correct method for your device to flash the ROM\n]nThe .zip is located at: %1$s</string>
    <string name="alert_update_title">ROM update available</string>
    <string name="alert_download">Download</string>
    <string name="alert_downloading">ROM is downloading. Please wait!</string>
    <string name="alert_unsupported_title">Unsupported ROM</string>
    <string name="alert_unsupported_message">The ROM developer has not enabled support for the OTA updater! Please ask them to add supporting!\n\n (otaupdater.otaid value empty or missing)</string>
    <string name="alert_update_to">New ROM version (%1$s) is available. It is free to update.</string>
    <string name="alert_prune_title">Delete files older than</string>
    <string name="menu_view">View Downloaded ROMs</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Download The Lastest ROM</string>
    <string name="menu_prune">Delete old files</string>
    <string name="menu_exit">Exit</string>
    <string name="toast_delete">File deleted successfully</string>
    <string name="toast_delete_error">There is problem while deleting file</string>
    <string name="toast_rename">File renamed successfully</string>
    <string name="toast_rename_error">There is problem while renaming file</string>
    <string name="toast_prune">Old file(s) deleted successuflly</string>
    <string name="toast_prune_error">There was a problem deleting old files</string>
    <string name="toast_no_updates">There are no updates at this time</string>
    <string name="toast_fetch_error">There was a problem fetching OTA information</string>
    <string name="toast_download_nospace">There is not enough space available for downloading ROM</string>
    <string name="toast_download_interrupted">The download was interrupted</string>
    <string name="toast_download_md5_mismatch">MD5 mismatch</string>
    <string name="toast_download_error">There was an error with the download</string>
    <string name="toast_nosd_shared">Your SD card is not available - mounted as USB storage</string>
    <string name="toast_nosd_error">Your SD card is not availabled</string>
    <string name="toast_no_download_files">No file downloaded</string>
    <string name="about_title">About</string>
    <string name="about_ota_title">OTA Updater</string>
    <string name="about_ota_summary">VNPT Updater</string>
    <string name="about_version_title">Version</string>
    <string name="about_version_unknown">Unknown version</string>
    <string name="main_version">ROM Date</string>
    <string name="main_updates_error">Error fetching update info: %1$s</string>
    <string name="main_updates_new">New updates: %1$s</string>
    <string name="contributors_title">Contributors</string>
    <string name="contributors_error">Error loading contributors file</string>
    <string name="license_title">License</string>
    <string name="license_apache_title">Apache License</string>
    <string name="license_error">Error loading license file</string>
    <string name="settings_notification">Notification settings</string>
    <string name="display_notification">Display Notification</string>
    <string name="notify_default">Notifications are on</string>
    <string name="notify_false">Notifications are off</string>
    <string name="ota_link">Update link</string>
    <string name="ota_modify_accept">OK</string>
    <string name="ota_modify_cancel">Cancel</string>
    <string name="ota_modify_link">Change update file url</string>
    <string name="ota_modify_success">Update new source</string>
    <string name="circleDialog_wait">System is processing. This can take a few minutes. Please wait...   </string>
    <string name="downloading_ROM">Downloading ROM: </string>
    <string name="title_activity_desc_rom_dialog">DescRomDialog</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_desc_rom">Descripton ROM</string>
    <string name="RomVersion">Rom Number</string>
	<string name="descriptionRom">Description</string>
	<string name="have_new_rom">There is a new ROM version (%1$s).Do you want to upgrade now?</string>
	<string name="getting_error">Getting new version failed</string>
	<string name="application_version">1.1.2</string>
	<string name="menu_usbupdate">USB update</string>
	<string name="usbupdate_title">USB update</string>
	<string name="usbupdate_approve">Do you want to update firmware using USB flash?</string>
	<string name="usbupdate_accept">OK</string>
	<string name="usbupdate_cancel">Cancel</string>
	<string name="usbupdate">Update Local</string>
	<string name="update_online">Update Online</string>
	<string name="file_not_exist">File Not Exist</string>
	<string name="wait_for_network">Waiting for network connection…</string>
	<string name="wait_for_booting_subsystem">Waiting for booting subsystem…</string>
    <string name="wait_for_upgrading_system">System is upgrading. Please do not power off!</string>
    <string name="device_name">Device:</string>
</resources>