<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/main_device_info">       
        <Preference
            android:title="@string/main_device" 
            android:icon="@drawable/device" 
            android:key="device_view"/>
        <Preference
            android:title="@string/main_rom" 
            android:icon="@drawable/hammer" 
            android:key="rom_view"/>
        <!-- 
        <Preference
            android:title="@string/menu_view" 
            android:icon="@drawable/version" 
            android:key="version_view"/>
        -->
        <Preference
            android:title="@string/main_otaid" 
            android:icon="@drawable/key" 
            android:key="otaid_view"/>
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/main_updates">
        <Preference
            android:title="@string/update_online" 
            android:icon="@drawable/cloud" 
            android:key="avail_updates"/>
        <Preference
            android:title="@string/usbupdate" 
            android:icon="@drawable/usb" 
            android:key="update_usb"/>
    </PreferenceCategory>
</PreferenceScreen>
