<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dip"
        android:paddingRight="8dip">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RomVersion"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="12dip"
            android:paddingBottom="5dip"/>
    <TextView
            android:id="@+id/romVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:paddingLeft="10dip"
            android:paddingBottom="5dip"/>
    <TextView
            android:text="@string/descriptionRom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
    />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:paddingLeft="10dip"
            android:layout_weight="1">

        <!-- Security settings description. -->
        <LinearLayout
                android:id="@+id/permissions_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="?android:attr/scrollbarSize"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/desc_rom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />
            <LinearLayout
                    android:id="@+id/security_settings_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:orientation="vertical"/>
        </LinearLayout>
    </ScrollView>

    <!-- OK confirm and cancel buttons.  -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="beginning"
            android:paddingTop="16dip">

        <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:measureWithLargestChild="true">

            <LinearLayout android:id="@+id/leftSpacer"
                    android:layout_weight="0.25"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone" />

            <Button android:id="@+id/cancel_button"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/alert_cancel"
                    android:maxLines="2"
                    style="?android:attr/buttonBarButtonStyle" 
                    android:onClick="onClickCancel"/>

            <Button android:id="@+id/ok_button"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/alert_continue"
                    android:maxLines="2"
                    android:filterTouchesWhenObscured="true"
                    style="?android:attr/buttonBarButtonStyle" 
                    android:onClick="onClickOK"/>

            <LinearLayout android:id="@+id/rightSpacer"
                    android:layout_width="0dip"
                    android:layout_weight="0.25"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
